Convert OneOf element to Or